changed swagger documentation
