# docs/swagger.json
@@ -8,7 +8,12 @@
     "paths": {
         "/perms/": {
             "get": {
-                "description": "get all permissions",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "gets all permissions",
                 "consumes": [
                     "application/json"
                 ],
@@ -35,6 +40,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "create new permission",
                 "consumes": [
                     "application/json"
@@ -82,8 +92,51 @@
                 }
             }
         },
+        "/refresh": {
+            "get": {
+                "description": "regeneration tokens by refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "refresh"
+                ],
+                "summary": "refreshToken",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Refresh token",
+                        "name": "refresh_token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/authProto.GeneratedTokens"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/roles/": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "gets all roles",
                 "consumes": [
                     "application/json"
@@ -111,6 +164,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "create new role",
                 "consumes": [
                     "application/json"
@@ -160,6 +218,11 @@
         },
         "/roles/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get role by id",
                 "consumes": [
                     "application/json"
@@ -204,6 +267,11 @@
         },
         "/roles/{id}/perms": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get permissions bound with role",
                 "consumes": [
                     "application/json"
@@ -247,6 +315,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "binding role with permissions",
                 "consumes": [
                     "application/json"
@@ -290,6 +363,17 @@
         }
     },
     "definitions": {
+        "authProto.GeneratedTokens": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
         "model.BindRoleWithPermission": {
             "type": "object",
             "properties": {
@@ -371,6 +455,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
